# GaofVoicer

./: README.md
app/: CMakeLists.txt  build.gradle
app/src/androidTest/java/com/gaof/gaofvoicer/: ExampleInstrumentedTest.java
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: GaofVoiceJni.cpp
app/src/main/java/com/gaof/gaofvoicer/: MainActivity.java  VoicerFixer.java
app/src/main/res/layout/: activity_main.xml
app/src/main/res/values/: strings.xml
app/src/test/java/com/gaof/gaofvoicer/: ExampleUnitTest.java
gradle/wrapper/: gradle-wrapper.properties
